syntax = "proto3";

import "google/protobuf/empty.proto";

package dev.nizalzov.grpc;

message PutRequest {
  string key = 1;
  bytes value = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
}

message DeleteRequest {
  string key = 1;
}

message RangeRequest {
  string key_since = 1;
  string key_to = 2;
}

message KeyValuePair {
  string key = 1;
  bytes value = 2;
}

message RangeResponse {
  repeated KeyValuePair pairs = 1;
}

message CountResponse {
  int32 count = 1;
}

service KeyValueService {
  rpc Put(PutRequest) returns (google.protobuf.Empty);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc Range(RangeRequest) returns (stream RangeResponse);
  rpc Count(google.protobuf.Empty) returns (CountResponse);
}